--- a/opentasks-master/opentasks/build.gradle
+++ b/opentasks-master/opentasks/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco'
 if (project.hasProperty('PLAY_STORE_SERVICE_ACCOUNT_CREDENTIALS')) {
     apply plugin: 'com.github.triplet.play'
 }
@@ -13,6 +14,7 @@ android {
         targetSdkVersion TARGET_SDK_VERSION.toInteger()
         versionName version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     if (project.hasProperty("DMFS_RELEASE_KEYSTORE")) {
         signingConfigs {
@@ -25,6 +27,7 @@ android {
         }
     }
     buildTypes {
+        debug { testCoverageEnabled = true }
         release {
             if (project.hasProperty("DMFS_RELEASE_KEYSTORE")) {
                 signingConfig signingConfigs.release
@@ -49,7 +52,37 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+jacoco{
+    toolVersion = "0.8.1+"
+}
 
+def coverageSourceDirs = [
+        '../opentasks/src/main/java'
+]
+
+task jacocoTestReport(type: JacocoReport) {
+    group = "Reporting"
+    description = "Generate Jacoco coverage reports after running tests."
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+    classDirectories = fileTree(
+            dir: './build/intermediates/javac/debug/compileDebugJavaWithJavac',
+            excludes: ['**/R*.class',
+                       '**/*$InjectAdapter.class',
+                       '**/*$ModuleAdapter.class',
+                       '**/*$ViewInjector*.class'
+            ]
+    )
+
+    sourceDirectories = files(coverageSourceDirs)
+    additionalSourceDirs = files(coverageSourceDirs)
+    executionData = fileTree(
+            dir: "$buildDir/outputs/code-coverage/connected"
+    )
+
+}
 dependencies {
     implementation project(':opentasks-provider')
     implementation deps.support_appcompat
@@ -84,6 +117,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     implementation project(path: ':opentaskspal')
+
 }
 
 if (project.hasProperty('PLAY_STORE_SERVICE_ACCOUNT_CREDENTIALS')) {
