--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <sourceDirectory>src/main/java</sourceDirectory>
-
+        <testSourceDirectory>src/test</testSourceDirectory>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
